pnpm/crates/package-manifest/src/tests/snapshots/pnpm_package_manifest__tests__manifests__init_package_json_content.snap
---
source: crates/package_json/src/lib.rs
assertion_line: 228
expression: "serde_json::to_string_pretty(&package_json).unwrap()"
---
{
  "name": "test",
  "version": "1.0.0",
  "description": "",
  "main": "index.js",
  "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1"
  },
  "keywords": [],
  "author": "",
  "license": "ISC"
}
