pnpm/crates/package-manifest/src/tests/snapshots/pnpm_package_manifest__tests__manifests__init_package_json_content_with_every_init_option.snap
---
source: pnpm/crates/package-manifest/src/tests/manifests.rs
expression: "serde_json::to_string_pretty(&manifest).unwrap()"
---
{
  "name": "test",
  "version": "2.0.0",
  "description": "",
  "main": "index.js",
  "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1"
  },
  "keywords": [],
  "author": "pnpm <xxxxxx@pnpm.com> (https://www.github.com/pnpm)",
  "license": "MIT",
  "devEngines": {
    "packageManager": {
      "name": "pnpm",
      "version": "11.22.0",
      "onFail": "download"
    }
  },
  "packageManager": "pnpm@11.22.0",
  "type": "module"
}
